# spagents

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/spagents/: __init__.py
src/spagents/actions/: discovery.py
src/spagents/browser/: manager.py  page.py  session.py
src/spagents/cli/: main.py
src/spagents/detection/: ready.py
src/spagents/extraction/: extractor.py  models.py
src/spagents/js/: __init__.py  content_heuristic.js  discover_actions.js  extract_articles.js  extract_links.js  extract_main_text.js  extract_metadata.js  mutation_observer.js
src/spagents/mcp/: server.py
tests/: conftest.py  test_actions.py  test_detection.py  test_extraction.py  test_js_loader.py  test_models.py  test_page.py  test_session.py
tests/test_spa/: index.html
